<resources>


    <!--Create Post -->
    <string name="create_post_title">Title</string>
    <string name="create_post_description">Description</string>
    <!--Global-->
    <string name="btn_submit">Submit</string>
</resources>
